// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card  Component Matches snapshots Matches not zero snapshot 1`] = `
<div
  className="card"
>
  <div
    className="card-row"
  >
    <label
      className="card-label"
      data-testid="totalTimeLabel"
    >
      Total time
      :
    </label>
    <span
      className="card-value"
      data-testid="totalTime"
    >
      180
      h
    </span>
  </div>
  <div
    className="card-row"
  >
    <label
      className="card-label"
    >
      Audits
      :
    </label>
    <span
      className="card-value"
    >
      99
      h
    </span>
  </div>
  <div
    className="card-row"
  >
    <label
      className="card-label"
    >
      Meetings
      :
    </label>
    <span
      className="card-value"
    >
      63
      h
    </span>
  </div>
  <div
    className="card-row"
  >
    <label
      className="card-label"
    >
      Support
      :
    </label>
    <span
      className="card-value"
    >
      18
      h
    </span>
  </div>
</div>
`;

exports[`Card  Component Matches snapshots Matches zero snapshot 1`] = `
<div
  className="card"
>
  <div
    className="card-row"
  >
    <label
      className="card-label"
      data-testid="totalTimeLabel"
    >
      Total time
      :
    </label>
    <span
      className="card-value"
      data-testid="totalTime"
    >
      0
      h
    </span>
  </div>
</div>
`;
